--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample weather app for NYC",
   "main": "app.js",
   "scripts": {
-    "start": "node ./app.js",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,17 @@
   "homepage": "https://github.com/kenyo/weatherApp#readme",
   "dependencies": {
     "express": "^4.15.4",
-    "node-fetch": "^1.7.2"
+    "node-fetch": "^1.7.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "webpack-dev-server": "^2.7.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "html-webpack-plugin": "^2.26.0",
+    "webpack": "^3.5.5"
   }
 }
